minor spacing and button issue fixed
dropdown text color fixed

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -424,3 +424,12 @@ input[type='number'] {
 div{
     color: white;
 }
+
+
+.multiselect__option{
+    color: black;
+}
+
+.multiselect__single{
+    color: black;
+}
